--- a/ex004/index.html
+++ b/ex004/index.html
@@ -20,7 +20,7 @@
             <input type="text" name="sobrenome" id="isobrenome" class="campo">
         </div>
         <div>
-            <input type="submit" value="Enviar" class="botao_enviar" onmouseenter="entrar()" onmouseout="sair()">
+            <input type="submit" value="Enviar" id="botao_enviar" onmouseenter="entrar()" onmouseout="sair()">
         </div>
     </form>
 
